name:                al
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dimitri Sabadie <dimitri.sabadie@gmail.com>
maintainer:          Dimitri Sabadie <dimitri.sabadie@gmail.com>
copyright:           Dimitri Sabadie

category:            Sound
build-type:          Simple

extra-source-files:  CHANGELOG.md

cabal-version:       >= 1.10

library
  ghc-options:         -W -Wall -O2

  if os(windows)
    if arch(i386)
      cpp-options:     -DCALLCV=stdcall
    else
      cpp-options:     -DCALLCV=ccall
  else
    cpp-options:       -DCALLCV=ccall

  build-tools:         c2hs >= 0.23 && < 0.24

  exposed-modules:     Sound.AL
                     , Sound.AL.Buffer
                     , Sound.AL.Defines
                     , Sound.AL.EAX
                     , Sound.AL.Errors
                     , Sound.AL.Extensions
                     , Sound.AL.Listener
                     , Sound.AL.Source
                     , Sound.AL.State
                     , Sound.AL.Types
                     , Sound.ALC
                     , Sound.ALC.Context
                     , Sound.ALC.Defines
                     , Sound.ALC.Device
                     , Sound.ALC.Errors
                     , Sound.ALC.Extensions
                     , Sound.ALC.State
                     , Sound.ALC.Types

  default-extensions:  CPP
                     , ForeignFunctionInterface

  build-depends:       base >= 4.7 && < 4.8

  hs-source-dirs:      src

  default-language:    Haskell2010
