cabal-version:       2.2

name:                al
version:             0.2.0.0
synopsis:            OpenAL 1.1 raw API.
description:         OpenAL is a minimalistic sound API that aims to provide
                     bare features for /spacialized audio/. The API looks like
                     the OpenGL one, thus the libs are pretty great together.

                     Check the README for information on building this package.

license:             BSD-3-Clause
license-file:        LICENSE
author:              Dimitri Sabadie <dimitri.sabadie@gmail.com>
                     Oleksii Divak <frozenwitness@gmail.com>
maintainer:          Dimitri Sabadie <dimitri.sabadie@gmail.com>
copyright:           Dimitri Sabadie
                     Oleksii Divak
homepage:            http://github.com/phaazon/al
bug-reports:         http://github.com/phaazon/al/issues

category:            Sound
build-type:          Simple
stability:           experimental

extra-source-files:  CHANGELOG.md

source-repository head
  type:     git
  location: git://github.com/phaazon/al.git

flag ccall
  description: Use the ccall call convention.
  default: False

flag stdcall
  description: Use the stdcall call convention (takes precedence over the ccall flag).
  default: False

library
  ghc-options:         -Wall

  if flag(stdcall)
    cpp-options:       -DCALLCV=stdcall
  elif flag(ccall)
    cpp-options:       -DCALLCV=ccall
  else
    cpp-options:       -DCALLCV=capi

  if os(windows)
    if arch(x86_64)
      extra-lib-dirs:  "C:\\Program Files (x86)\\OpenAL 1.1 SDK\\libs\\Win64"
    else
      extra-lib-dirs:  "C:\\Program Files (x86)\\OpenAL 1.1 SDK\\libs\\Win32"

    include-dirs:      "C:\\Program Files (x86)\\OpenAL 1.1 SDK\\include"
    extra-libraries:   OpenAL32
  else
    if os(darwin)
      frameworks: OpenAL
      include-dirs: "/usr/local/opt/openal-soft/include"
    else
      pkgconfig-depends: openal

  build-tools:         c2hs >= 0.23 && < 0.29

  exposed-modules:     Sound.AL
                       Sound.ALC

  build-depends:       base >= 4.10 && < 5

  hs-source-dirs:      src

  default-language:    Haskell2010
